force-app/main/default/objects/WLR_Time_Standard__c/WLR_Time_Standard__c.object-meta.xml
<CustomObject>
    <description>WLR (Work Line Rate) Time Standards library. Stores labor minutes per unit for every line item type used in landscape install, finish job, outdoor living, aqua, and irrigation work orders. Used by duration calculation flow and WLRDurationCalculationService to compute Service Appointment duration from actual scope. Editable by operations without deployment — use this instead of Work_Line_Rate__mdt for new standards.</description>
    <label>WLR Time Standard</label>
    <nameField>
        <label>Standard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WLR Time Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>