force-app/main/default/objects/WLR_Time_Standard__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, this standard is excluded from duration calculation matching. Use to deprecate old standards without deleting them.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>