force-app/main/default/objects/WLR_Time_Standard__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date this time standard became active. Used for historical reference if standards are updated.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>