force-app/main/default/objects/WLR_Time_Standard__c/fields/Minutes_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Per_Unit__c</fullName>
    <description>Labor time in minutes per unit of measure (see Unit_Basis__c). For Sod: 0.12 min per SF. For Fungicide/Insecticide: 1 min per 1,000 SF. For per-item tasks: the flat time per item installed.</description>
    <label>Minutes Per Unit</label>
    <precision>10</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>