force-app/main/default/objects/WLR_Time_Standard__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Operational notes, assumptions, caveats, or scheduling constraints for this time standard.</description>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>