force-app/main/default/objects/WLR_Time_Standard__c/fields/Source_File__c.field-meta.xml
<CustomField>
    <fullName>Source_File__c</fullName>
    <description>Name of the source document this standard was derived from (e.g. WLR Time.xlsx).</description>
    <label>Source File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>