force-app/main/default/objects/WLR_Time_Standard__c/fields/Task_Code__c.field-meta.xml
<CustomField>
    <fullName>Task_Code__c</fullName>
    <description>Stable unique identifier for this time standard (e.g. WLR-001). Used as external ID for upsert-safe data loads. Do not change once assigned.</description>
    <externalId>true</externalId>
    <label>Task Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>