force-app/main/default/objects/WLR_Time_Standard__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <description>Human-readable task name as it appears in the WLR source file and on work order line items.</description>
    <label>Task Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>