force-app/main/default/objects/WLR_Time_Standard__c/fields/Unit_Basis__c.field-meta.xml
<CustomField>
    <fullName>Unit_Basis__c</fullName>
    <description>The unit of measure that Minutes_Per_Unit__c is expressed in. Must match the unit of measure on the Work Order Line Item for correct duration calculation.</description>
    <label>Unit Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Item</fullName>
            </value>
            <value>
                <fullName>Per Task</fullName>
            </value>
            <value>
                <fullName>Per Package</fullName>
            </value>
            <value>
                <fullName>Per SF</fullName>
            </value>
            <value>
                <fullName>Per 1,000 SF</fullName>
            </value>
            <value>
                <fullName>Per LF</fullName>
            </value>
            <value>
                <fullName>Per 10 LF</fullName>
            </value>
            <value>
                <fullName>Per Bale</fullName>
            </value>
            <value>
                <fullName>Per Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>