force-app/main/default/objects/WLR_Time_Standard__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version label for this standard (e.g. v1.0, v2.0-2026). Increment when minutes_per_unit changes.</description>
    <label>Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>