force-app/main/default/objects/WLR_Time_Standard__c/fields/Work_Category__c.field-meta.xml
<CustomField>
    <fullName>Work_Category__c</fullName>
    <description>Broad category describing the type of work for this time standard. Used for filtering and reporting.</description>
    <label>Work Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grading</fullName>
            </value>
            <value>
                <fullName>Planting - Trees</fullName>
            </value>
            <value>
                <fullName>Planting - Shrubs</fullName>
            </value>
            <value>
                <fullName>Sod / Seeding</fullName>
            </value>
            <value>
                <fullName>Mulch / Ground Cover</fullName>
            </value>
            <value>
                <fullName>Pest / Disease Treatment</fullName>
            </value>
            <value>
                <fullName>Aqua / Irrigation</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Plant Layout</fullName>
            </value>
            <value>
                <fullName>Outdoor Living</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>